--- a/src/styles/nav-footer/footer.css
+++ b/src/styles/nav-footer/footer.css
@@ -1,12 +1,12 @@
 .Footer {
   width: 100%;
   height: 20px;
-  padding-top: .375rem;
+  padding: 10px 0px 10px 0px;
   position: fixed;
-  color:black;
-  font-size: 14px;
+  color: #b21515;;
+  font-size: 18px;
   text-align: center;
   left: 0px;
   bottom: 0;
-  background-color: #FEE253;
+  background-color: #e69f13;
 }
