--- a/src/styles/pages/home.css
+++ b/src/styles/pages/home.css
@@ -1,7 +1,7 @@
 .Home {
   height: 100vh;
   text-align: center;
-  background-image: url(../../img/inicio-bur.gif);
+  background-image: url(../../img/inicio-bur2.gif);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
