--- a/src/styles/pages/waiter.css
+++ b/src/styles/pages/waiter.css
@@ -1,7 +1,7 @@
 .waiter {
   height: 100vh;
-  background-color: rgb(230 159 19 / 63%);
-  background-image: url(../../img/fondo-posible.png);
+  /* background-color: rgb(230 159 19 / 63%); */
+  /* background-image: url(../../img/fondo-posible.png); */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -13,9 +13,11 @@
 }
 
 .order {
-  border: #00000033 2px solid;
   height: 20vmax;
-  background-color: #fee253;
+  width: 500px;
+  background-color: #e69f13a8;
+  border: none;
+  border-radius: 15px;
 }
 
 .btn-send-order {
@@ -29,32 +31,35 @@
 }
 
 .btn-order-green, .btn-order-red{
-  border: 1px;
+  border: none;
+  background: none;
+  /* border: 1px;
   background-color: #e69f13;
   border-radius: 10px;
-  padding: 10px;
+  padding: 10px; */
 }
 
 
-.btn-order-green:hover {
+/* .btn-order-green:hover {
   background-color: rgb(56, 172, 56);
 }
 
 .btn-order-red:hover {
   background-color: rgb(206, 61, 61);
-}
+} */
 
 .btn-roder-waiter {
   border: 1px;
-  background-color: #FEE253;
+  background-color: #e69f13a8;
   margin: 5px;
   padding: 8px;
-  color: black;
+  color: #b21515;
   border-radius: 10px;
 }
 
 .btn-roder-waiter:hover {
-  background-color: #e69f13;
+  background-color: #b21515;
+  color: white;
 }
 
 .menu-orden {
@@ -76,6 +81,10 @@
   margin-top: 40px;
 }
 
+.text-order{
+  margin: 0px;
+}
+
 .side {
   width: 40%;
   /* background-color: burlywood; */
@@ -88,7 +97,7 @@
 }
 
 .img-product {
-  width: 100px;
+  width: 70px;
   border-radius: 10px;
 }
 
@@ -115,8 +124,12 @@
 }
 
 .btn--order {
-  display: flex;
-  justify-content: space-between;
+  background: #b21515;
+  border: none;
+  border-radius: 15px;
+  text-align: center;
+  font-size: 16px;
+  color: white;
   width: 80px;
 }
 
@@ -141,4 +154,36 @@
 
 .btn-primary{
   background-color: cornflowerblue !important;
+}
+
+.btn-order-trash {
+  height: 50px;
+  width: 50px;
+  border: none;
+  background: none;
+  background-image: url(../../img/icons8-basura.svg);
+  background-repeat: no-repeat;
+  background-size: 20px;
+  background-position-x: center;
+  background-position-y: center;
+}
+
+.table-order{
+  border: none;
+  border-radius: 15px;
+}
+
+.table-order-title{
+  background: #b21515;
+  color: white;
+  font-size: 18px;
+  text-align: center;
+}
+
+.table-product-order {
+  justify-content: center;
+}
+
+.table-order-product{
+  text-align: center;
 }
