--- a/src/styles/nav-footer/nav.css
+++ b/src/styles/nav-footer/nav.css
@@ -1,24 +1,47 @@
-* {
-  margin: 0;
-}
-
 .navBar {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  width: 100%;
-  padding: 10px 0px 10px 0px;
-  font-size: 10px;
-  text-align: center;
-  left: 0px;
-  bottom: 0;
+  display: grid;
+  grid-template-columns: 0.3fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 0.2fr;
+  gap: 0px 0px;
+  grid-auto-flow: row;
+  grid-template-areas:
+    "nav-logo title-nav1 title-nav2 title-nav3 btn-sign-out";
+  justify-items: last baseline;
   background-color: #e69f13;
 }
 
 .nav-logo {
-  width: 50px;
+  grid-area: nav-logo;
+  width: 60px;
+  display: flex;
+  justify-content: center;
+  margin: 0px 20px 0px 20px;
 }
 
-.title-nav {
-  font-size: 20px;
+.title-nav1 { grid-area: title-nav1; }
+.title-nav2 { grid-area: title-nav2; }
+.title-nav3 { grid-area: title-nav3; }
+
+.title-nav1, .title-nav2, .title-nav3, .btn-sign-out {
+  font-size: 18px;
+  color: #b21515;
+  text-align: center;
+  font-weight: bolder;
+  align-items: center;
+  padding-top: 15px;
+}
+
+.title-nav1:hover, .title-nav2:hover, .title-nav3:hover, .btn-sign-out:hover {
+  font-size: 18px;
+  color: white;
+  text-align: center;
+  font-weight: bolder;
+  align-items: center;
+  background-color: #b21515;
+}
+
+.btn-sign-out {
+  grid-area: btn-sign-out;
+  background: none;
+  border: none
 }
