--- a/src/styles/menu/modalOrderConfirm.css
+++ b/src/styles/menu/modalOrderConfirm.css
@@ -10,24 +10,28 @@
 }
 
 .window {
-    position: relative;
-    background: #fff;
-    border-radius: 10px;
-    padding: 15;
-    box-shadow: 2px 2px 10px rgba(0,0,0,3);
-    z-index: 10;
-    min-width: 320;
+  position: relative;
+  background: #fff;
+  border-radius: 10px;
+  padding: 15;
+  box-shadow: 2px 2px 10px rgba(0,0,0,3);
+  z-index: 10;
+  min-width: 320;
 }
 
 .close-btn {
-    position: absolute;
-    top: 0;
-    right: 0;
-    border-radius: 5px;
-    background-color: red;
+  position: absolute;
+  top: 0;
+  right: 0;
+  border-radius: 5px;
+  background-color: #b21515;
+  color: white;
 }
 
 .children-div {
   height: 150px;
   width: 300px;
+  background-color: rgb(250, 245, 237);
+  border-radius: 10px;
 }
+
